# hiveden

./: .gitignore  LICENSE  README.md  SHELL_MODULE_OVERVIEW.md  config.example.yaml  go.mod  go.sum  hiveden.db  pyproject.toml  requirements.txt
.github/workflows/: release.yaml
cmd/api/: main.go
cmd/cli/: main.go
conductor/: tech-stack.md  tracks.md
conductor/tracks/backup_20260114/: index.md  metadata.json  plan.md  spec.md
docs/: POSTGRESQL_DEPENDENCIES.md  PYPI_DEPENDENCIES.md
internal/api/: api.go
internal/configuration/: config.go
internal/docker/: docker.go  docker_test.go  network.go  types.go
packaging/arch/: PKGBUILD  hiveden.default.yaml  hiveden.install
packaging/debian/: control  dirs  hiveden.dirs  hiveden.install  hiveden.service  postinst
packaging/fedora/: hiveden.spec
src/hiveden/: cli.py  main.py  version.py
src/hiveden/api/: dtos.py  server.py
src/hiveden/apps/: traefik.py
src/hiveden/appstore/: adoption_service.py  catalog_service.py  uninstall_service.py
src/hiveden/backups/: manager.py  scheduler.py
tests/: conftest.py  test_api_backups.py  test_appstore_adoption_service.py  test_appstore_router.py  test_appstore_uninstall_service.py  test_backups.py  test_backups_config.py  test_backups_lifecycle.py  test_backups_retention.py  test_backups_scheduler.py  test_btrfs.py  test_cli.py  test_dns_endpoint.py  test_dns_update.py  test_docker_volumes.py  test_docker_volumes_endpoint.py  test_pkgs_manager.py  test_shell_websocket.py  test_smb.py  test_storage_devices.py  test_storage_router.py  test_systemd_manager.py
(+71 files in other folders)
