[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hiveden"
version = "0.0.1"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A CLI tool and REST API for managing your personal server."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "fastapi",
    "uvicorn",
    "docker",
    "PyYAML",
    "psutil",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
hiveden = "hiveden.cli:main"
